# RustProbe

./: .gitignore  CHANGELOG.md  README.md
.kiro/specs/advanced-usb-fingerprinting/: .config.kiro  design.md  requirements.md  tasks.md
Rust_Probe/: .gitignore  Cargo.toml  README.md
Rust_Probe/data/: device_signatures.json
Rust_Probe/profiles/: profiles.json
Rust_Probe/src/: device_analyzer.rs  device_database.rs  lib.rs  main.rs  report_generator.rs  trust_evaluator.rs
Rust_Probe/src/core/: anomaly.rs  confidence.rs  device_identity.rs  device_signature.rs  errors.rs  fingerprint.rs  layer_result.rs  mod.rs  profile.rs  timing.rs  types.rs
Rust_Probe/src/engine/: cache_layer.rs  confidence_engine.rs  device_analyzer.rs  fingerprint_collector.rs  fingerprint_database.rs  forensic_engine.rs  identity_engine.rs  mismatch_engine.rs  mod.rs  origin_inference.rs  profile_database.rs  profile_loader.rs  scoring_engine.rs  signature_database.rs  whitelist.rs
Rust_Probe/src/layers/: bootloader_verification.rs  cdc_challenge.rs  descriptor_consistency.rs  descriptor_ordering.rs  hid_fingerprint.rs  invalid_request.rs  mod.rs  passive_descriptor.rs  protocol_probe.rs  stack_fingerprint.rs  structural_fingerprint.rs  timing_analysis.rs
Rust_Probe/tests/: golden_tests.rs
Rust_Probe/tests/golden/: esp32_cdc_disabled.json  g502_genuine.json  lufa_clone.json  tinyusb_spoof.json
