[package]
name = "RustProbe"
version = "0.5.0"
edition = "2021"

[dependencies]
rusb = "0.9"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
log = "0.4"
env_logger = "0.11"
lru = "0.12"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"

[dev-dependencies]
proptest = "1.4"
