[package]
name = "RustProbe"
version = "1.0.0"
edition = "2021"

[lib]
name = "rust_probe"

[dependencies]
rusb = "0.9"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
log = "0.4"
env_logger = "0.11"
lru = "0.12"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
proptest = "1.4"
